# digital_signature

./: CMakeLists.txt
docs/: README.md
headers/: verify.h
include/: keygen.h  sign.h
sources/: keygen.c  sign.c  verify.c
src/: main.c  sign.c
